// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package resourcerpc;

// 生成 golang 代码后的包名
option go_package = "./resourcerpc";

//==================== 通用消息 ====================
message EmptyResp {
}

message IdReq {
  int64 id = 1;
}

message IdsReq {
  repeated int64 ids = 1;
}

message BatchResp {
  int64 success_count = 1;
}

// 分页请求
message PageReq {
  int64 page = 1;      // 页码
  int64 page_size = 2; // 每页大小
  repeated string sorts = 3; // 排序字段
}

// 分页响应
message PageResp {
  int64 page = 1;      // 页码
  int64 page_size = 2; // 每页大小
  int64 total = 3;     // 总数
}

/************** blog 相册管理 **************/
message PhotoDetailsResp {
  int64 id = 1;// 主键
  int64 album_id = 2;// 相册id
  string photo_name = 3;// 照片名
  string photo_desc = 4;// 照片描述
  string photo_src = 5;// 照片地址
  int64 is_delete = 6;// 是否删除
  int64 created_at = 7;// 创建时间
  int64 updated_at = 8;// 更新时间
}

message NewPhotoReq {
  int64 id = 1;// 主键
  int64 album_id = 2;// 相册id
  string photo_name = 3;// 照片名
  string photo_desc = 4;// 照片描述
  string photo_src = 5;// 照片地址
  int64 is_delete = 6;// 是否删除
}

message UpdatePhotoDeleteReq {
  repeated int64 ids = 1;// id
  int64 is_delete = 2;// 是否删除
}

message FindPhotoListReq {
  PageReq paginate = 1;    // 分页参数
  int64 album_id = 2; // 相册id
  int64 is_delete = 3;// 是否删除
}

message FindPhotoListResp {
  PageResp pagination = 1; // 分页信息
  repeated PhotoDetailsResp list = 2;
}

message NewAlbumReq {
  int64 id = 1;// 主键
  string album_name = 2;// 相册名
  string album_desc = 3;// 相册描述
  string album_cover = 4;// 相册封面
  int64 is_delete = 5;// 是否删除
  int64 status = 6;// 状态值 1公开 2私密
}

message AlbumDetailsResp {
  int64 id = 1;// 主键
  string album_name = 2;// 相册名
  string album_desc = 3;// 相册描述
  string album_cover = 4;// 相册封面
  int64 is_delete = 5;// 是否删除
  int64 status = 6;// 状态值 1公开 2私密
  int64 created_at = 7;// 创建时间
  int64 updated_at = 8;// 更新时间
  int64 photo_count = 9;// 照片数量
}

message UpdateAlbumDeleteReq {
  repeated int64 ids = 1;// 相册id
  int64 is_delete = 2;// 是否删除
}

message FindAlbumListReq {
  PageReq paginate = 1;    // 分页参数
  string album_name = 2;// 相册名
  int64 is_delete = 3;// 是否删除
}

message FindAlbumListResp {
  PageResp pagination = 1; // 分页信息
  repeated AlbumDetailsResp list = 2;
}

/************** blog 页面管理 **************/
message NewPageReq {
  int64 id = 1;// 页面id
  string page_name = 2;// 页面名
  string page_label = 3;// 页面标签
  string page_cover = 4;// 页面封面
  int64 is_carousel = 5;// 是否轮播
  repeated string carousel_covers = 6;// 轮播列表
}

message PageDetailsResp {
  int64 id = 1;// 页面id
  string page_name = 2;// 页面名
  string page_label = 3;// 页面标签
  string page_cover = 4;// 页面封面
  int64 is_carousel = 5;// 是否轮播
  repeated string carousel_covers = 6;// 轮播列表
  int64 created_at = 7;// 创建时间
  int64 updated_at = 8;// 更新时间
}

message FindPageListReq {
  PageReq paginate = 1;    // 分页参数
  string page_name = 2;// 页面名
}

message FindPageListResp {
  PageResp pagination = 1; // 分页信息
  repeated PageDetailsResp list = 2;
}


service ResourceRpc {
  // 创建照片
  rpc AddPhoto(NewPhotoReq) returns(PhotoDetailsResp);
  // 更新照片
  rpc UpdatePhoto(NewPhotoReq) returns(PhotoDetailsResp);
  // 更新照片删除状态
  rpc UpdatePhotoDelete(UpdatePhotoDeleteReq) returns(BatchResp);
  // 删除照片
  rpc DeletesPhoto(IdsReq) returns(BatchResp);
  // 查询照片列表
  rpc FindPhotoList(FindPhotoListReq) returns(FindPhotoListResp);


  // 创建相册
  rpc AddAlbum(NewAlbumReq) returns(AlbumDetailsResp);
  // 更新相册
  rpc UpdateAlbum(NewAlbumReq) returns(AlbumDetailsResp);
  // 更新相册删除状态
  rpc UpdateAlbumDelete(UpdateAlbumDeleteReq) returns(BatchResp);
  // 获取相册
  rpc GetAlbum(IdReq) returns(AlbumDetailsResp);
  // 删除相册
  rpc DeletesAlbum(IdsReq) returns(BatchResp);
  // 查询相册列表
  rpc FindAlbumList(FindAlbumListReq) returns(FindAlbumListResp);


  // 创建页面
  rpc AddPage(NewPageReq) returns(PageDetailsResp);
  // 更新页面
  rpc UpdatePage(NewPageReq) returns(PageDetailsResp);
  // 删除页面
  rpc DeletesPage(IdsReq) returns(BatchResp);
  // 查询页面列表
  rpc FindPageList(FindPageListReq) returns(FindPageListResp);
}
